<resources>
    <string name="app_name">LaoChat</string>
    <string name="facebook_app_id" translatable="false">344936189855807</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb344936189855807</string>
    <string name="authority" translatable="false">com.laodev.chatapp.fileprovider</string>
    <string name="file_not_found">File not found! File is either Moved, Deleted or Renamed.</string>
    <string name="media">Media</string>
    <string name="audio">Audio</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="empty_text_chat_list">Your chats appear here Start chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here Start chatting by selecting a group.</string>
    <string name="empty_text_status_list">Your status appear here Start uploading your status here.</string>
    <string name="empty_log_call_list">Your call logs appear here Start by selecting a user.</string>
    <string name="no_groups">You have no groups Create a new group to begin with.</string>
    <string name="invitation_text">Hey, I found this LaoApp!, cool chatting application, come join me here. https://play.google.com/store/apps/details?id=%s</string>
    <string name="invite_friends">Invite friends…</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="can_resend_otp">You can Resend the OTP in</string>
    <string name="verification_code">Verification Code</string>
    <string name="underline_otp" translatable="false">_ _ _ _ _ _</string>
    <string name="point_zoom" translatable="false">. . .</string>
    <string name="always_secure">Always Secure</string>
    <string name="loading">Loading</string>
    <string name="logo">Logo</string>
    <string name="block">Block</string>
    <string name="phone_number">Phone number</string>
    <string name="status">Status</string>
    <string name="cool">Cool</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="join">Join</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="meeting_code">Meeting ID</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
</resources>