<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ChatDetailFragment">

    <RelativeLayout
        android:id="@+id/mediaSummaryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/media" />

        <TextView
            android:id="@+id/mediaCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_5sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mediaSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/media"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toStartOf="@+id/mediaSummaryAll" />

        <TextView
            android:id="@+id/mediaSummaryAll"
            android:layout_width="@dimen/media_summary_strip"
            android:layout_height="@dimen/media_summary_strip"
            android:layout_below="@id/media"
            android:layout_alignParentEnd="true"
            android:layout_margin="2dp"
            android:background="@color/darkGreen"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/view_all"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/groupDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/participantsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Participants (0)"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/participantsAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/dotted_border"
            android:padding="4dp"
            android:text="  + Add more  "
            android:textColor="@color/border_red"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/participantsProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/participantsCount"
            android:indeterminate="true"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/participantsCount"
            android:layout_marginTop="8dp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/userDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/userPhoneClick"
                    android:gravity="center_vertical"
                    android:text="+919876543210"
                    android:textColor="@color/textColor0"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/userPhoneClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_phone" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:background="@color/textColorSecondary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/userStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/cool"
                    android:textColor="@color/textColor0"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@color/textColorSecondary" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/muteNotificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_notifications"
                android:textColor="@color/textColor0"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@color/textColorSecondary" />

            <TextView
                android:id="@+id/blockUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_block_red_24dp"
                android:drawablePadding="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/block"
                android:textColor="#E00E17"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="@color/textColorSecondary" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
