<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_detail_inner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_125sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_45sdp"
            android:elevation="2dp"
            android:src="@drawable/ic_otp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9">

            <TextView
                android:id="@+id/verificationHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/verificationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verificationHeading"
                android:layout_margin="@dimen/_32sdp"
                android:layout_toStartOf="@id/changeNumber"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/changeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verificationHeading"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/ic_mode_edit" />

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:gravity="center"
                android:hint="@string/underline_otp"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otp_expires_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otp"
                android:layout_marginStart="@dimen/_32sdp"
                android:text="@string/can_resend_otp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/otp_expires_txt"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/submit"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_20sdp"
                android:src="@drawable/ic_submit" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/ic_keyboard_arrow_left_white_36dp"
        android:tint="@color/colorPrimary" />
</RelativeLayout>